err/gjertsentweet.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GjertsenTweet'...
Compiling './lib/python3.5/site-packages/GjertsenTweet/response.py'...
***   File "./lib/python3.5/site-packages/GjertsenTweet/response.py", line 23
    except KeyError, IndexError:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/GjertsenTweet-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/dict_digger'...
Listing './lib/python3.5/site-packages/dict_digger-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/npyscreen'...
Listing './lib/python3.5/site-packages/npyscreen/compatibility_code'...
Listing './lib/python3.5/site-packages/npyscreen-4.9.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/twitter'...
Listing './lib/python3.5/site-packages/twitter-1.17.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
